# DiabeticFootExtension

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  README.md  SuperBuild.cmake  Test.files  Test.includes
FeetSegmentation/: CMakeLists.txt  qSlicerFeetSegmentationModule.cxx  qSlicerFeetSegmentationModule.h  qSlicerFeetSegmentationModuleWidget.cxx  qSlicerFeetSegmentationModuleWidget.h
FeetSegmentation/Logic/: CMakeLists.txt  FeetSegmentation.cxx  FeetSegmentation.h  FeetSegmentationDataset.cxx  FeetSegmentationDataset.h  Utils.cxx  Utils.h  vtkFeetSegmentationDataset.cxx  vtkFeetSegmentationDataset.h  vtkFeetSegmentationDepthDataset.cxx  vtkFeetSegmentationDepthDataset.h  vtkSlicerFeetSegmentationLogic.cxx  vtkSlicerFeetSegmentationLogic.h
FeetSegmentation/Resources/: qSlicerFeetSegmentationModule.qrc
FeetSegmentation/Resources/TorchScript/: CMakeLists.txt
FeetSegmentation/Resources/UI/: qSlicerFeetSegmentationFooBarWidget.ui  qSlicerFeetSegmentationIOWidget.ui  qSlicerFeetSegmentationModuleWidget.ui
FeetSegmentation/Widgets/: CMakeLists.txt  qSlicerFeetSegmentationFooBarWidget.cxx  qSlicerFeetSegmentationFooBarWidget.h  qSlicerFeetSegmentationIOWidget.cxx  qSlicerFeetSegmentationIOWidget.h
LibtorchTest/: CMakeLists.txt  qSlicerLibtorchTestModule.cxx  qSlicerLibtorchTestModule.h  qSlicerLibtorchTestModuleWidget.cxx  qSlicerLibtorchTestModuleWidget.h
LibtorchTest/Logic/: CMakeLists.txt  Torch  vtkSlicerLibtorchTestLogic.cxx  vtkSlicerLibtorchTestLogic.h
LibtorchTest/Resources/: qSlicerLibtorchTestModule.qrc
LibtorchTest/Resources/UI/: qSlicerLibtorchTestFooBarWidget.ui  qSlicerLibtorchTestModuleWidget.ui
LibtorchTest/Widgets/: qSlicerLibtorchTestFooBarWidget.cxx  qSlicerLibtorchTestFooBarWidget.h
PCLTest/: CMakeLists.txt  qSlicerPCLTestModule.cxx  qSlicerPCLTestModule.h  qSlicerPCLTestModuleWidget.cxx  qSlicerPCLTestModuleWidget.h
PCLTest/Logic/: vtkSlicerPCLTestLogic.cxx  vtkSlicerPCLTestLogic.h
PCLTest/Resources/: qSlicerPCLTestModule.qrc
PCLTest/Resources/UI/: qSlicerPCLTestFooBarWidget.ui  qSlicerPCLTestModuleWidget.ui
PCLTest/Widgets/: qSlicerPCLTestFooBarWidget.cxx  qSlicerPCLTestFooBarWidget.h
SuperBuild/: External_Boost.cmake  External_Eigen3.cmake  External_Flann.cmake  External_Foo.cmake  External_PCL.cmake  External_Torch.cmake
